# clibs

./: .gitignore  README.md  WORKSPACE
imagemagick/: BUILD.bazel
imagemagick/darwin/include/MagickCore/: magick-baseconfig.h  version.h
imagemagick/darwin/lib/: libMagickCore-7.Q16HDRI.dylib  libMagickWand-7.Q16HDRI.dylib
imagemagick/linux/include/MagickCore/: magick-baseconfig.h  version.h
libvips/: BUILD.bazel
libvips/darwin/include/: glibconfig.h
libvips/darwin/include/vips/: version.h
libvips/darwin/lib/: libglib-2.0.dylib  libgobject-2.0.dylib  libvips.dylib
libvips/linux/include/vips/: version.h
